main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
  access_key = "AKIQAX7" # place you access key here
  secret_key = "pTOzK" # place your secret key here
} 

## Project
## Variables

#1. Create vpc
/* resource "aws_vpc" "prod_vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "production"
  }
} */

#2. Create Internet Gateway
/* resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod_vpc.id

  /* tags = {
    Name = "main"
  } 
} */


#3. Create Custom Route Table
/* resource "aws_route_table" "prod_route_table" {
  vpc_id = aws_vpc.prod_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "Prod"
  }
}
 */

#4. Create a Subnet

/* resource "aws_subnet" "subnet_1" {
  vpc_id = aws_vpc.prod_vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "Prod_subnet"
  }  
}
 */

#5. Associate Subnet with Custom Route Table

/* resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet_1.id
  route_table_id = aws_route_table.prod_route_table.id
}
 */

#6. Create Security Group to allow port 22, 80, 443

/* resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow Web inbound traffic"
  vpc_id      = aws_vpc.prod_vpc.id

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
    ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
    ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  } 

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_web"
  }
} */


#7. Create network interface with an IP in the subnet that was created in step 4.

/* resource "aws_network_interface" "web_server_tjaas" {
  subnet_id       = aws_subnet.subnet_1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]
} */


#8. Assign an elastic IP to the network interface created in step 7. 

/* resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web_server_tjaas.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [aws_internet_gateway.gw]
}

output "server_public_ip" {
  value = aws_eip.one.public_ip  
}
 */
#9. Create Ubuntu Server and install/enable Apache2. 

/* resource "aws_instance" "web_server_instance" {
  ami = "ami-0263e4deb427da90e"
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"
  key_name = "main_key"

  network_interface {
    device_index = 0
    network_interface_id = aws_network_interface.web_server_tjaas.id
  }

  user_data = <<-EOF
              #!/bin/bash
              sudo apt update -y
              sudo apt install apache2 -y
              sudo systemctl start apache2
              sudo bach -c 'echo My first web server > /var/www/html/index.html'
              EOF
  tags = {
    Name = "Web Server"
  }
} */

/* output "server_private_ip" {
  value = aws_instance.web_server_instance.private_ip
}


output "server_id" {
  value = aws_instance.web_server_instance.id
}
 */
/* resource "aws_instance" "myFirstServer" {
  ami           = "ami-0263e4deb427da90e"
  instance_type = "t3.micro"

  tags = {
    Name = "Ubuntu Server"
  }
} */ 


/* resource "aws_vpc" "first-vpc" {
  cidr_block = "10.0.0.0/16"
   tags = {
    Name = "production"
  }
}

resource "aws_subnet" "subnet-1" {
  vpc_id     = aws_vpc.first-vpc.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "prod-subnet"
  }
}
 */

/* Basic structure for creating resources
  resource "<provider>_<resource_type>" "name" {
    config options.... 
    key = "value"
    key2 = "value2" 
} 
 */
